<resources>
    <string name="app_name">Khabo</string>
    <string name="user_name">Name</string>
    <string name="password">Password</string>
    <string name="sign_up">Register</string>
    <string name="user_email">Email</string>
    <string name="user_phone">01977141106</string>
    <string name="sign_in">LogIn</string>
    <string name="already_signed_up">Already Signed up? <b>Login</b> here</string>
    <string name="signup_text">Don\'t have an account? <b>Sign Up</b> here</string>

    <array name="location">
        <item>Select Location</item>
        <item>Hall</item>
        <item>Mes</item>
    </array>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="title_menu">Menu</string>
    <string name="title_account">Account</string>
    <string name="title_order_status">Order Status</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_menu_fragment">Hello menu fragment</string>
    <string name="title_help">Help</string>
    <string name="title_contact_us">Contact Us</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_address">Upper Jessore Road, KuliBagan, Daulatpur(Beside the Daulatpur Club)</string>

</resources>
