<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_restaurant_menu_black_24dp"
        android:title="@string/title_menu" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_order_status_black_24dp"
        android:title="@string/title_order_status" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/title_account" />
    <item
        android:id="@+id/navigation_information"
        android:icon="@drawable/ic_help_desk_24dp"
        android:title="@string/title_help" />
    <item
        android:id="@+id/navigation_contact_us"
        android:icon="@drawable/ic_contact_us_24dp"
        android:title="@string/title_contact_us" />

</menu>
