<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingLeft="28dp"
    android:paddingRight="28dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background_registration"
    tools:context=".LoginActivity">

    <!-- TODO: Update login fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/login_activity_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="280dp"
                android:layout_height="180dp"
                android:background="@drawable/khabop"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="38dp"
                android:layout_marginBottom="20dp"
                android:paddingStart="6dp"
                android:paddingEnd="8dp"
                android:paddingBottom="9dp"
                android:paddingTop="4dp"/>

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="45dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_profile"
                android:drawablePadding="12dp"
                android:ems="10"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/user_name"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorPrimaryText"
                android:textSize="24sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"/>

            <EditText
                android:ems="10"
                android:textSize="24sp"
                android:id="@+id/user_password"
                android:drawablePadding="12dp"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/ic_lock"
                android:background="@android:color/transparent"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:textColorHint="@color/colorPrimaryText"
                android:textColor="@color/colorPrimaryText"
                android:hint="@string/password"
                android:inputType="textPassword" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Remember Me"
                android:layout_marginTop="20dp"/>
            <Button
                android:id="@+id/signup_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:elevation="15dp"
                android:text="@string/sign_in"
                android:textStyle="bold"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorAccent"/>
            <TextView
                android:id="@+id/signuptext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                android:text="@string/signup_text"
                android:textColor="@color/colorPrimaryText"
                android:textAlignment="center"/>

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:id="@+id/progressbar"/>

</RelativeLayout>


